--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div class="social-links">
   <img style="width: 100%;" src="images/coding.png" alt="">
   <div class="social">
-  <h3>Get in touch on Social Media!</h3>
+  <h3>Get in touch</h3>
     <a href="#"><i class="fab fa-facebook"></i></a> 
     <a href="https://github.com/damydavo" target="_blank"><i class="fab fa-github"></i></a> 
    <a href="#"><i class="fab fa-linkedin"></i></a> 
