Added the dark mode

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div data-mode="light" id="light-mode" class="theme-dot"></div>
         <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
       </div>
-      <p id="settings-note">*Set dark Theme* <br><span style="font-size: 18px;"><a
+      <p id="settings-note">*Set dark mode* <br><span style="font-size: 18px;"><a
             href="https://docs.google.com/document/d/1swXpk8ejARGQFr-CJ7XADVFOaBsv5huWCRI1N2LQgy8/edit?usp=sharing"
             target="_blank">Download My Resume!</a></span>
     </div>
