--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="left-column">
-      <img id="profile_pic" src="images/damy.jpg" alt="">
+      <img id="profile_pic" src="images/david.png" alt="">
       <h5 style="text-align:center; line-height: 0;">Hi, I'm Atoki David</h5>
       <h5 style="text-align:center; line-height: 0;">Passionate Web Developer</h5>
       <div id="theme-option-wrapper">
