--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Atoki's Portfolio</title>
+  <title>Atoki David Damilola</title>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/3ecbaf4a61.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
