Made some modifications

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
           <div id="corner-tl" class="corner"></div>
           <div id="corner-tr" class="corner"></div>
           <h3>About me</h3>
-          <p>Passionate Web Developer with two years of experience vastly in the use of Javascript, Php. I have an
-            in-depth knowledge of SEO, Ads Operations(Ad Ops).
+          <p>Passionate Web Application Developer with three years of experience vastly in the use of Javascript, Php. I
+            have an
+            in-depth knowledge of SEO and Ads Operations(Ad Ops).
           </p>
           <div id="corner-br" class="corner"></div>
           <div id="corner-bl" class="corner"></div>
@@ -80,7 +81,7 @@
           <div id="skills">
             <ul>
               <li>React</li>
-              <li>Php/Codeigniter</li>
+              <li>Php</li>
               <li>Wordpress</li>
               <li>Javascript</li>
               <li>Mysql/Mongodb</li>
@@ -88,7 +89,7 @@
             </ul>
 
             <ul>
-              <li>Html/Css</li>
+              <li>Tailwindcss</li>
               <li>Bootstrap</li>
               <li>Ads Operation</li>
               <li>SEO</li>
@@ -187,7 +188,7 @@
       <div class="main-container">
         <div class="contact-wrapper">
           <div class="contact">
-            <h3>Please Kindly contact me for projects, Here is my contact details. </h3>
+            <h3>Please Kindly contact me for projects, Here are my contact details. </h3>
             <p><i class="fas fa-phone"> </i> <strong>Phone Number</strong>: 08106048379</p>
             <p><i class="fas fa-envelope"> </i> <strong>Email-Address</strong>: damydavo2015@gmail.com</p>
             <p><i class="fa fa-address-book"> </i> <strong>Address</strong>: Balengi Avenue, Island Estate
