Made some modifications

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Atoki David Damilola</title>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/3ecbaf4a61.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
