--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
       </div>
       <p id="settings-note">*Set dark mode* <br><span style="font-size: 18px;"><a
-            href="https://docs.google.com/document/d/1swXpk8ejARGQFr-CJ7XADVFOaBsv5huWCRI1N2LQgy8/edit?usp=sharing"
+            href="https://docs.google.com/document/d/1Il8XuTQJQXTUAk8ti0xEfE-1DtfXkKy7/edit?usp=sharing&ouid=116927216943499326519&rtpof=true&sd=true"
             target="_blank">Download My Resume!</a></span>
     </div>
 
